contrast error fixed

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   min-height: 100vh;
   background-size: cover;
   background-attachment: fixed;
-  background-color: #ddd9d6;
+  background-color: #464646;
 }
 
 .Button {
